@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-12T08:17:13Z",
-  "count_outdated" : 757,
-  "uniques_outdated" : 433,
-  "count" : 782,
+  "timestamp" : "2023-08-12T16:17:40Z",
+  "count_outdated" : 759,
+  "uniques_outdated" : 434,
+  "count" : 783,
   "uniques" : 453,
   "clones" : [
-    {
-      "timestamp": "2023-07-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 3,
@@ -115,9 +106,9 @@
     },
     {
       "timestamp": "2023-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
