@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2023-07-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-30T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2023-08-12T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
